blockml/test/errors/12_chart/e194/e194m.model
model: e194m
joins:
- from_view: e194_one
  as: a
